Initialized ui module and javafx implementation to docker